--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
 }
 
 input {
+  background: #768d99;
   border: 1;
   border-radius: none;
   font-family: inherit;
@@ -16,7 +17,12 @@ input {
   margin-bottom: 1px;
 }
 
+input::placeholder {
+  color: #000000;
+}
+
 button {
+  background: #679eff;
   border: 0;
   border-radius: none;
   font-family: inherit;
