--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,73 +18,22 @@
   align-items: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
 }
 
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
 .grid {
   display: flex;
   align-items: normal;
   justify-content: center;
-  flex-wrap: nowrap;
-  max-width: 2500px;
-  margin-top: 3rem;
+  flex-wrap: wrap;
 }
 
 .card {
-  margin: 1rem;
-  flex-basis: 45%;
+  margin: 0.5rem;
+  flex-basis: 20%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -117,7 +66,7 @@
 }
 
 .logo {
-  height: 1em;
+  max-width: 100%;
 }
 
 @media (max-width: 600px) {
