--- a/styles/winrateTable.module.css
+++ b/styles/winrateTable.module.css
@@ -24,6 +24,7 @@
 }
 
 .leftButton {
+    width: 100%;
     border-radius: 10px 0px 0px 10px;
 }
 
@@ -44,7 +45,7 @@
   margin: 0.5rem;
   flex-basis: 20%;
   padding: 0.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -60,7 +61,9 @@
 }
 
 .card table {
-  color: #ffffff;
+    color: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card h3 {
