--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,43 +1,62 @@
 .container {
-  background: #0c0c26;
-  color: #ffffff;
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    background: #0c0c26;
+    color: #ffffff;
+    min-height: 100vh;
+    padding: 0 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    padding: 5rem 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .title {
-  margin: 10px;
-  line-height: 1.15;
-  font-size: 4rem;
+    margin: 10px;
+    line-height: 1.15;
+    font-size: 4rem;
 }
 
 .grid {
-  display: flex;
-  align-items: normal;
-  justify-content: center;
-  flex-wrap: wrap;
+    display: flex;
+    align-items: normal;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card {
+    width: 23em;
+    flex-basis: 30%;
+    padding: 0.5rem;
+    text-align: center;
+    color: inherit;
+    text-decoration: none;
+    border: 1px solid #eaeaea;
+    border-radius: 10px;
+    transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+    color: #0070f3;
+    border-color: #0070f3;
 }
 
 .logo {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+    .grid {
+        width: 100%;
+        flex-direction: column;
+    }
 }
