--- a/styles/winrateTable.module.css
+++ b/styles/winrateTable.module.css
@@ -46,7 +46,7 @@
     flex-basis: 30%;
     padding: 0.5rem;
     text-align: center;
-    color: inherit;
+    /* color: inherit; */
     text-decoration: none;
     border: 1px solid #eaeaea;
     border-radius: 10px;
