--- a/styles/hoverCard.module.css
+++ b/styles/hoverCard.module.css
@@ -1,33 +1,58 @@
 .container {
-    z-index: 100;
-    position: relative;
+    display: block;
+    /* z-index: 100; */
+    /* left: 0;
+    right: 0; */
+    /* position: relative; */
+    /* width: 100%;
+    height: 100%; */
+    /* overflow: auto; */
     /* transform: translate(100%, 0%); */
 }
 
 .overlay {
     /* right: -200%; */
     /* right: -13px; */
-    left: auto;
-    right: auto;
-    white-space: nowrap;
-    width: fit-content;
+    /* margin: auto; */
+    /* white-space: nowrap; */
+    /* width: fit-content; */
+    /* margin: auto; */
+    z-index: 3;
+    left: calc(50% - 170px);
+    /* left: 0; */
+    min-width: 340px;
+    /* height: 50%; */
     position: absolute;
-    margin-top: 150%;
+    margin-top: 10%;
     background: rgba(0, 0, 0, 0.95);
-    color: white;
+    /* color: white; */
     padding: 10px;
     text-align: center;
     border-radius: 10px;
     border: 1px solid #0070f3;
 }
-.overlay:before {
+/* .overlay:before {
     position: absolute;
     content: "";
     top: -26px;
-    /* left: auto;
-    right: auto; */
+    left: auto;
+    right: auto;
+    left: calc(50px + 50%);
     left: 13px;
-    /* left: calc(50% - 13px); */
+    left: calc(50% - 13px);
+    border-right: 13px solid transparent;
+    border-left: 13px solid transparent;
+    border-bottom: 26px solid rgba(0, 0, 0, 0.95);
+} */
+
+.triangle {
+    content: "";
+    position: absolute;
+    /* top: -26px; */
+    /* left: 13px; */
+    /* left: calc(auto + 13px); */
+    margin-top: calc(10% - 26px);
+    margin-left: 13px;
     border-right: 13px solid transparent;
     border-left: 13px solid transparent;
     border-bottom: 26px solid rgba(0, 0, 0, 0.95);
