--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,6 +31,13 @@
     flex-wrap: wrap;
 }
 
+.rankIconContainer {
+    margin: 0 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .card {
     width: 23em;
     flex-basis: 30%;
@@ -48,6 +55,11 @@
 .card:active {
     color: #0070f3;
     border-color: #0070f3;
+}
+
+.rankIcon {
+    width: 75px;
+    height: 75px;
 }
 
 .logo {
