--- a/styles/TeamsTable.module.css
+++ b/styles/TeamsTable.module.css
@@ -1,14 +1,10 @@
 .card {
     max-width: 100%;
     margin: 0.5rem;
-    /* flex-basis: 30%; */
     padding: 0.5rem;
     text-align: center;
-    /* color: inherit; */
-    /* text-decoration: none; */
     border: 1px solid #eaeaea;
     border-radius: 7px;
-    /* transition: color 0.15s ease, border-color 0.15s ease; */
 }
 
 .card:hover,
@@ -20,24 +16,39 @@
 
 .card table {
     color: #ffffff;
-    /* font-size: 3vw; */
-    /* margin-left: auto; 
-    margin-right: auto; */
+    text-align: left;
+    border-collapse: collapse;
 }
 
-.card th {
-    white-space: nowrap;
+.card td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+/* Add a border and padding between the teams every 2 rows */
+.card tr:nth-of-type(2n) td {
+    border-bottom: 1px solid rgb(255, 255, 255);
+    padding-bottom: 10px;
+}
+
+/* Add top padding between teams */
+.card tr:nth-of-type(2n+1) td {
+    padding-top: 10px;
+}
+
+/* Remove top padding for first row */
+.card tr:first-child td {
+    padding-top: 0px;
+}
+
+/* Don't show separator on last row */
+.card tr:last-child td {
+    border-bottom: none;
 }
 
 .card h3 {
     margin: 0 0 1rem 0;
     font-size: 1.5rem;
-}
-
-.card p {
-    margin: 0;
-    font-size: 1.25rem;
-    line-height: 1.5;
 }
 
 .img {
